bridge/base/0-dashboard-namespace.yaml
#! 0-dashboard-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: dashboard
    labels:
        com.docker.compose.project: dashboard
