bridge/base/pgadmin-service.yaml
# check if there is at least one published port

#! pgadmin-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: pgadmin-published
    namespace: dashboard
    labels:
        com.docker.compose.project: dashboard
        com.docker.compose.service: pgadmin
spec:
    selector:
        com.docker.compose.project: dashboard
        com.docker.compose.service: pgadmin
    ports:
        - name: pgadmin-5050
          port: 5050
          protocol: TCP
          targetPort: pgadmin-80

# check if there is at least one published port
